--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -35,4 +35,4 @@ jobs:
     - run: |
         docker tag "rg.fr-par.scw.cloud/open-mini-backup/${REPO,,}:${VERSION}" \
           "rg.fr-par.scw.cloud/open-mini-backup/${REPO,,}:latest"
-    - run: docker push "rg.fr-par.scw.cloud/open-mini-backup/${REPO,,}latest"
+    - run: docker push "rg.fr-par.scw.cloud/open-mini-backup/${REPO,,}:latest"
